--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
       </nav>
       <section class="container-fluid p-1">
         <div class="row">
-        <img src="./assets/img/sonia.jpg" alt="banner">
-        <h1 style="text-align: center; fondo"> SONIA VILLACORTE LIZARAZO </h1>
-        <p style="text-align:center"> 
+          <img src="./assets/img/sonia.jpg" alt="banner">
+          <h1 style="text-align: center; fondo"> SONIA VILLACORTE LIZARAZO </h1>
+          <a href="https://vercel.com/sonys-projects-2416dd5b/portafolio1/3gPaPfD3exekM4Y9k1bLYYX46h2N">VERCEL</a>
+          <p style="text-align:center"> 
           He trabajado en diversas áreas en el gremio de salud como : plataforma de ingreso de insumos de procedimientos y facturación, manejo de glosas, tutelas, referencia y contrarreferencia en instituciones privadas y públicas.
-        </p>
-        <br>
-        <p> Conocimientos técnicos en aplicativos en salud como Ghips, break point, SAP, en la actualidad estudiante de desarrollo de software.
-        En la academia me gradue de estudios técnicos en: Investigación judicial y crimínalistica, análisis financiero y logistico, mantenimiento y reparación de computadores;tecnólogico en gestión de empresas de salud; actualmente estudiante de administración de sistemas informáticos.
-        </p>
+          </p>
+          <br>
+          <p> Conocimientos técnicos en aplicativos en salud como Ghips, break point, SAP, en la actualidad estudiante de desarrollo de software.
+           En la academia me gradue de estudios técnicos en: Investigación judicial y crimínalistica, análisis financiero y logistico, mantenimiento y reparación de computadores;tecnólogico en gestión de empresas de salud; actualmente estudiante de administración de sistemas informáticos.
+          </p>
         </div>
         
       </section>
