--- a/proyectos.html
+++ b/proyectos.html
@@ -33,7 +33,7 @@
           <h5 class="fw-bold" style="color: green;"></h5>
           <button type="button" class="btn btn-warning"> 
           <i class="bi bi-cart4"></i>
-          <a href="">hhhh</a>
+          <a href="https://vercel.com/sonys-projects-2416dd5b/proyecto-fr/56tg6VMsjhxWjRzMQj99C2ouRD5y">Frailejon</a>
           </button>
       </div>
      </div>
@@ -46,7 +46,7 @@
           <hr>
           <h5 class="fw-bold" style="color: crimson;"></h5>
           <button type="button" class="btn btn-warning">
-            <a href="">jjjjj</a>
+            <a href="https://vercel.com/sonys-projects-2416dd5b/ejercicio-cambio-de-color-de-texto-f6ln#:~:text=ejercicio%2Dcambio%2Dde%2Dcolor%2Dde%2Dtexto%2Df6ln%2D5lazqgm4i.vercel.app">Restaurante</a>
           <i class="bi bi-cart4"></i>
           </button>
       </div>
@@ -60,7 +60,7 @@
           <hr>
           <h5 class="fw-bold" style="color: green;"></h5>
           <button type="button" class="btn btn-warning">
-            <a href="">hh</a> 
+            <a href="https://practica-sura1intro.vercel.app/">PENDIENTE</a> 
           <i class="bi bi-cart4"></i>
           </button>
       </div>
