--- a/proyectos.html
+++ b/proyectos.html
@@ -22,29 +22,27 @@
 <main>
 </section>
 <section class="container">
-  <div class="row row-cols-1 row-cols-md-5 justify-content-center mt-5">
+  <div class="row row-cols-1 row-cols-md-5 justify-content-center mt-5 fondoproyectos">
 
      <div class="col">
-      <div class="card p-2 shadow">
-          <img src="./assets/img/frailejon.jpg" alt="p1" class="img-fluid w-100">
-          <h4>Frailejon</h4>
-          <p>Proyecto basado en el personaje Frailejon Ernesto Perez</p>
-          <hr>
+      <div class="card p-2 shadow bg-success mt-5 mb-2">
+          <img src="./assets/img/frailejon.jpg" alt="p1" class="img-fluid">
+          <h4 style="background-color:rgb(197, 205, 50)">Frailejon</h4>
+          <p style="background-color: rgb(97, 160, 95);">Proyecto basado en el personaje Frailejon Ernesto Perez</p>
           <h5 class="fw-bold" style="color: green;"></h5>
           <button type="button" class="btn btn-warning"> 
           <i class="bi bi-cart4"></i>
-          <a href="https://vercel.com/sonys-projects-2416dd5b/proyecto-fr/56tg6VMsjhxWjRzMQj99C2ouRD5y">Frailejon</a>
+          <a href="https://vercel.com/sonys-projects-2416dd5b/proyecto-fr/56tg6VMsjhxWjRzMQj99C2ouRD5y">proyecto-fr</a>
           </button>
       </div>
      </div>
       
      <div class="col">
-      <div class="card p-2 shadow h-100">
+      <div class="card p-2 shadow bg-warning mb-4">
           <img src="./assets/img/restaurante.jpg" alt="p3" class="img-fluid w-100">
-          <h4>Restaurante</h4>
+          <h4 style="color: brown;">Restaurante</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, voluptas?</p>
-          <hr>
-          <h5 class="fw-bold" style="color: crimson;"></h5>
+          <h5 class="fw-bold" style="color: rgb(183, 220, 20);"></h5>
           <button type="button" class="btn btn-warning">
             <a href="https://vercel.com/sonys-projects-2416dd5b/ejercicio-cambio-de-color-de-texto-f6ln#:~:text=ejercicio%2Dcambio%2Dde%2Dcolor%2Dde%2Dtexto%2Df6ln%2D5lazqgm4i.vercel.app">Restaurante</a>
           <i class="bi bi-cart4"></i>
@@ -53,14 +51,14 @@
   </div>
 
   <div class="col">
-      <div class="card p-2 shadow h-100">
+      <div class="card p-2 shadow bg-primary mt-5">
           <img src="./assets/img/text.jpg" alt="p3" class="img-fluid w-100">
-          <h4>Repaso texto</h4>
-          <p>Pracica maneras de modificar fuentes</p>
-          <hr>
+          <h4 style="color: white;">Repaso texto</h4>
+          <p style="color: white;">Práctica maneras de modificar fuentes</p>
+          <br>
           <h5 class="fw-bold" style="color: green;"></h5>
-          <button type="button" class="btn btn-warning">
-            <a href="https://practica-sura1intro.vercel.app/">PENDIENTE</a> 
+          <button type="button" class="btn btn-info">
+            <a href="https://practica-sura1intro.vercel.app/">pendiente</a> 
           <i class="bi bi-cart4"></i>
           </button>
       </div>
