--- a/trayectoriaformativa.html
+++ b/trayectoriaformativa.html
@@ -5,27 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="icon" href="./assets/img/computer.png">
-    <link rel="stylesheet" href="/style/estilosportafolio.css">
+    <link rel="stylesheet" href="./style/estilostrayectoria.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
    <main>
-    <section class="container-fluid justify content-center fondo1">
+    <section class="container-fluid justify content-center">
         <div class="row">
             <div class="col-12">
-             <h1 style="text-align: center;">Técnico en desarrollo de software modalidad DUAL</h1>
-             <h3 style="text-align: center;">(Sura-Cesde)</h3>
-             <a href="index.html">Portafolio</a>
+             <h1 style="text-align: center; color: darkcyan;">Técnico en desarrollo de software modalidad DUAL</h1>
+             <h3 style="text-align: center; color: darkcyan;">(Sura-Cesde)</h3>
+             <a href="index.html" style="text-decoration: none;color: blue;">Home</a>
              <br>
-             <P style="text-align: center;">Asistente en Desarrollo de Software,con capacidades para desarrollar aplicativos tipo web y para dispositivos, utilizando herramientas, metodologías y lenguajes de programación requeridos por el entorno productivo, demostrando respeto, orden y creatividad en su desempeño.</P>
+             <P style="text-align: center;"> <strong>Asistente en Desarrollo de Software</strong>,con capacidades para desarrollar aplicativos tipo web y para dispositivos, <strong>utilizando herramientas, metodologías y lenguajes de programación requeridos por el entorno productivo</strong>, demostrando respeto, orden y creatividad en su desempeño.</P>
              <br>
         </div>
     </section>
     <section>
-        <div class="row">
-            <div class="col-12">
-             <img src="./assets/img/imagen lenguajes de programación.png"  class=img-fluid; alt="" height="700">
+        <div class="row justify-content-center text-center fondo1">
+            
+            <div class="col-5">
+             <img src="./assets/img/imagen lenguajes de programación3.png"  class=img-fluid; alt="" height="400">
             </div>
+            <div class="col-5">
+              <img src="./assets/img/sonia.jpg"  class=img-fluid; alt="" height="400">
+              <h4 style="text-align: center;">En la actualidad también estudio administración de sistemas informáticos.</h4>
+             </div>
         </div>
     </section>
     <div id="carouselExampleCaptions" class="carousel slide">
@@ -36,21 +42,32 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/img/bannersura.jpg" class="d-block w-100" alt="Sura">
+            <img src="./assets/img/bannersura.jpg" class="d-block w-100 mt-3" alt="Sura" >
             <div class="carousel-caption d-none d-md-block">
               <p>Estamos a tu lado para que te asegures de vivir!</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./assets/img/CESDE.jpg" class="d-block w-100" alt="CESDE">
+            <img src="./assets/img/CESDE.jpg" class="d-block w-100 mt-3" alt="CESDE">
             <div class="carousel-caption d-none d-md-block">
                 <h3>Conocimiento sin límites.</h3>
               <p style="font-size: small;">La modalidad DUAL es el conjunto de acciones e iniciativas formativas, mixtas de empleo y formación, que tienen por objeto la cualificación profesional de los trabajadores en un régimen de alternancia de actividad laboral en una empresa con la actividad formativa recibida en el marco del sistema de formación profesional para el empleo o del sistema educativo.
                 </p>
             </div>
           </div>
+          <ul>
+            <li>
+              <a href="https://es-la.facebook.com/">
+                <i class="fab fa-facebook-f icon"></i>    </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/?lang=uk"><i class="fab fa-twitter icon"></i></a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in icon"></i></a></li>
+          </ul>
           <div class="carousel-item">
-            <img src="./assets/img/bannercomfama.png" class="d-block w-100" height="500px">
+            <img src="./assets/img/bannercomfama.png" class="d-block w-100 mt-3" height="300px">
             <div class="carousel-caption d-none d-md-block">
               <p style="font-size: medium;">Educación para la vida</p>
             </div>
@@ -66,9 +83,10 @@
         </button>
       </div>
    </main>
-
-
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
+<footer>
 
+  
+</footer>
 </html>
